--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -5,37 +5,46 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/game_upper_padding"
-        android:paddingRight="@dimen/game_upper_padding">
+    <!--<FrameLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:paddingLeft="@dimen/game_upper_padding"-->
+        <!--android:paddingRight="@dimen/game_upper_padding">-->
 
-        <TextView
-            android:id="@+id/textViewTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="TextView"
-            android:textSize="@dimen/game_score_size"
-            android:textStyle="bold"
-            tool:text="01:52" />
+        <!--<TextView-->
+            <!--android:id="@+id/textViewTime"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="end"-->
+            <!--android:text="TextView"-->
+            <!--android:textSize="@dimen/game_score_size"-->
+            <!--android:textStyle="bold"-->
+            <!--tool:text="01:52" />-->
 
-        <TextView
-            android:id="@+id/textViewScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="@dimen/game_score_size"
-            android:textStyle="bold"
-            tool:text="23" />
-    </FrameLayout>
+        <!--<TextView-->
+            <!--android:id="@+id/textViewScore"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="TextView"-->
+            <!--android:textSize="@dimen/game_score_size"-->
+            <!--android:textStyle="bold"-->
+            <!--tool:text="23" />-->
+    <!--</FrameLayout>-->
 
-    <FrameLayout
-        android:id="@+id/swipe_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+    <!--<FrameLayout-->
+        <!--android:id="@+id/swipe_container"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1">-->
 
-    </FrameLayout>
+        <!--<com.mindorks.placeholderview.SwipeDirectionalView-->
+            <!--android:id="@+id/swipeView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
+
+    <!--</FrameLayout>-->
+
+
+
+
 </LinearLayout>
