--- a/app/src/main/res/layout/fragment_launcher.xml
+++ b/app/src/main/res/layout/fragment_launcher.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.LauncherFragment">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="@dimen/launcher_record_size"
+        android:paddingTop="12dp"
+        android:text="BEST SCORE: 123"
         android:textAllCaps="true"
-        android:text="TextView" />
+        android:textSize="@dimen/launcher_record_size"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -26,23 +27,27 @@
             android:layout_gravity="center"
             android:orientation="vertical">
 
-            <TextView
+            <Button
                 android:id="@+id/play"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/launcher_button_size"
                 android:gravity="center"
+                android:paddingLeft="@dimen/launcher_button_padding"
+                android:paddingRight="@dimen/launcher_button_padding"
+                android:text="@string/play_button_title"
                 android:textAllCaps="true"
-                android:text="@string/play_button_title" />
+                android:textSize="@dimen/launcher_button_size"/>
 
-            <TextView
+            <Button
                 android:id="@+id/tutorial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/launcher_button_size"
                 android:gravity="center"
+                android:paddingLeft="@dimen/launcher_button_padding"
+                android:paddingRight="@dimen/launcher_button_padding"
+                android:text="@string/tutorial_button_title"
                 android:textAllCaps="true"
-                android:text="@string/tutorial_button_title" />
+                android:textSize="@dimen/launcher_button_size"/>
         </LinearLayout>
 
     </FrameLayout>
