--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -25,7 +25,7 @@
                 android:layout_gravity="right"
                 android:text="TextView"
                 android:textColor="#00AAFE"
-                android:textSize="@dimen/game_font_size"
+                android:textSize="@dimen/game_score_size"
                 android:textStyle="bold"
                 tool:text="01:52"/>
 
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 android:textColor="#00DB8E"
-                android:textSize="@dimen/game_font_size"
+                android:textSize="@dimen/game_score_size"
                 android:textStyle="bold"
                 tool:text="23"/>
         </FrameLayout>
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/game_game_over"
-                android:textSize="@dimen/game_font_size"
+                android:textSize="@dimen/game_score_size"
                 android:textStyle="bold"/>
 
             <TextView
@@ -80,7 +80,7 @@
                 android:gravity="center"
                 android:text="@string/game_try_again"
                 android:textColor="#3AE2CE"
-                android:textSize="@dimen/game_font_size"
+                android:textSize="@dimen/game_score_size"
                 android:textStyle="bold"/>
         </LinearLayout>
 
