--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -12,13 +12,16 @@
         android:layout_margin="10dp"
         android:orientation="vertical"
         app:cardCornerRadius="7dp"
+
         app:cardElevation="4dp"
         app:cardPreventCornerOverlap="false">
 
         <ImageView
             android:id="@+id/actionImage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:minWidth="370dp"
+            android:minHeight="370dp"/>
 
     </android.support.v7.widget.CardView>
 </FrameLayout>
