--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -11,7 +11,7 @@
         android:textColor="@android:color/holo_blue_dark"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:text="5"
         android:layout_margin="16dp"/>
 
@@ -22,7 +22,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:layout_margin="16dp"/>
 
     <com.mindorks.placeholderview.SwipeDirectionalView
